Switch to using escaped string for .horizontalAlign ispercentage mixin so VS Code stops claiming it's an error.

--- a/src/less/mixins.less
+++ b/src/less/mixins.less
@@ -9,7 +9,8 @@
 }
 
 .horizontalAlign(@margin) when (ispercentage(@margin)){
-	width: unit((100 - (unit(@margin) * 2)), %);
+	@width: 100 - (unit(@margin) * 2);
+	width: e("@{width}%");
 	margin-left: @margin;
 	margin-right: @margin;
 }
